# ha-philips-airpurifier

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .venv  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  GEMINI.md  README.md  hacs.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: LABEL_GUIDE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  device-support-request.yml  feature-request.yml
.github/instructions/: aikido_rules.instructions.md  config_flow.instructions.md  python.instructions.md  services_yaml.instructions.md  upstream_library.instructions.md
.github/prompts/: Add Action.prompt.md  Create ADR.prompt.md  Debug Coordinator Issue.prompt.md
.github/workflows/: lint.yml  security.yml  stale.yml  validate.yml
.local/: venv
config/: configuration.yaml
custom_components/philips_airpurifier/: LICENSE.txt  __init__.py  (+25 more)
script/: clean  develop  hassfest  help  markdown-check  shell  shell-check  test  type-check  yaml-check
scripts/: check  clean  develop  lint  lint-check  monitor_homeassistant_philips.ps1  setup  test  type-check
tests/: __init__.py  conftest.py  const.py  test_binary_sensor.py  test_client.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_fan.py  test_helpers.py  test_humidifier.py  test_init.py  test_light.py  test_model.py  test_number.py  test_repairs.py  test_select.py  test_sensor.py  test_services.py  test_switch.py
(+5 files in other folders)
